@@ -2,3 +2,8 @@
 
 %:
 	dh $@
+
+override_dh_auto_test:
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	debian/tests/test-db-format pci.ids
+endif
